Taks 2/infra.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: application
  labels:
    name: application
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80	
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-clusterip-service
spec:
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP		
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-deployment
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Namespace
metadata:
  name: verify
  labels:
    name: verify
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: verify-deployment
  namespace: verify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: verify
  template:
    metadata:
      labels:
        app: verify
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: webapp-netpol-policy
  namespace: application
spec:
  podSelector: 
    matchLabels:
      app: webapp
  ingress: 
   - from:
      - podSelector: {}
   - from:
      - podSelector:
          matchLabels:
            app: trusted
        namespaceSelector: {}	
  egress:
   - to:
      - podSelector: {}
  policyTypes:
  - Ingress
  - Egress
